--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "start:dev": "",
+    "start": "npm run build && node dist/server.js",
+    "start:dev": "npm run watch",
+    "watch": "nodemon --watch src --exec \"npm run build && node dist/server.js\"",
     "build": "babel src -d dist"
   },
   "keywords": [],
