--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^7.4.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0"
   }
